// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<OperationButton /> renders 1`] = `
.glamor-0,
[data-glamor-0] {
  background: #ff8754;
}

.glamor-0:hover,
[data-glamor-0]:hover {
  color: #ff8754;
}

<Button
  action={[Function]}
  className={
    Object {
      "data-glamor-0": "",
    }
  }
  text="+"
/>
`;

exports[`<OperationButton /> renders with className 1`] = `
.glamor-0,
[data-glamor-0] {
  background: #ff8754;
  color: rebeccapurple;
}

.glamor-0:hover,
[data-glamor-0]:hover {
  color: #ff8754;
}

<Button
  action={[Function]}
  className={
    Object {
      "data-glamor-0": "",
    }
  }
  text="+"
/>
`;
